# oj-eval-claude-code-004-20260423003157

./: .gitignore  CMakeLists.txt  debug_main  debug_main.cpp  debug_test  debug_test.cpp  main.cpp  simple_test.txt  test_debug.txt  test_input.txt  test_register.txt  test_register_simple.txt  test_step1.txt
